welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:11: error: type mismatch;
 found   : Unit
 required: Int
  }else if((10>b && b>20)&&(10>a && a>20)){
        ^